2009-05-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added purgeDownloadResult command.
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2009-05-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Refactored.
	* src/XmlRpcMethod.cc

2009-05-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added XmlRpcResponse class. XmlRpcMethod::execute() now returns
	XmlRpcResponse.
	* src/HttpServerBodyCommand.cc
	* src/Makefile.am
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcResponse.cc
	* src/XmlRpcResponse.h
	* test/XmlRpcMethodTest.cc

2009-05-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	In XML-RPC option struct, header and index-out option can take
	array as value.
	* src/XmlRpcMethod.cc

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused option member from PeerConnection.
	* src/InitiatorMSEHandshakeCommand.cc
	* src/PeerConnection.cc
	* src/PeerConnection.h
	* src/PeerInteractionCommand.cc
	* src/PeerReceiveHandshakeCommand.cc
	* src/ReceiverMSEHandshakeCommand.cc

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added "seeder" key to getPeers response.
	* src/XmlRpcMethodImpl.cc

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added addMetalink XML-RPC command.
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* src/download_helper.cc
	* src/download_helper.h

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that POU peers are never choked in seeding.
	* src/BtSeederStateChoke.cc
	* src/BtSeederStateChoke.h
	
2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added web-seeding URI handling in addTorrent command.
	* src/XmlRpcMethodImpl.cc

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
